--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,13 @@
   <% end %>
 <% end %>
 <% if current_user %>
+<h3>
+  Signed in as <%=current_user.name%> (<%=current_user.email%>)
   <form action="/sessions/<%=current_user.id%>/logout" method="post">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     <input type="submit" value="Log Out">
   </form>
+</h3>
 <% end %>
 <%= yield %>
 </body>
